--- a/styles/elements.css
+++ b/styles/elements.css
@@ -8,5 +8,6 @@
     border-radius: 50%;
     border: 11px solid var(--orange);
     top: auto;
-    bottom: 5%;
+    bottom: 10%;
+    overflow: hidden;
 }
