--- a/styles/elements.css
+++ b/styles/elements.css
@@ -3,11 +3,20 @@
     position: absolute;
     align-items: center;
     justify-content: center;
-    width: 700px;
-    height: 700px;
+    width: 70vmin;
+    height: 70vmin;
     border-radius: 50%;
-    border: 11px solid var(--orange);
-    top: auto;
+    border: 1.1vmin solid var(--orange);
     bottom: 10%;
     overflow: hidden;
+    box-sizing: border-box;
+    transition: all 0.3s ease;
+}
+
+@media (max-width: 768px) {
+    .circle {
+        width: 80vmin;
+        height: 80vmin;
+        bottom: 5%;
+    }
 }
