--- a/styles/main.css
+++ b/styles/main.css
@@ -80,6 +80,8 @@ input, textarea, select {
     --white: #fffffe;
     --grey: #a7a9be;
     --black: #16161a;
+    --border-radius: 15px;
+    --transition-duration: 0.3s;
 }
 
 body, html {
@@ -112,132 +114,6 @@ header {
     display: flex;
     padding: 60px 130px;
     justify-content: space-between;
-}
-
-@media (max-width: 1024px) {
-    h1 {
-        font-size: 40px;
-    }
-
-    h2 {
-        font-size: 38px;
-    }
-
-    h3 {
-        font-size: 15px;
-    }
-
-    header {
-        padding: 40px 80px;
-    }
-
-    .email-container {
-        padding: 100px 200px;
-    }
-
-    .social {
-        gap: 20px;
-    }
-
-    .persons-container {
-        gap: 40px;
-    }
-
-    .left-person, .right-person {
-        gap: 20px;
-    }
-    
-    .person-name, .person-info {
-        font-size: 20px;
-    }
-
-    .staff-text {
-        font-size: 60px;
-    }
-
-    .white-stroke {
-        -webkit-text-stroke-width: 0.8px;
-    }
-
-    .left-circle {
-        left: -55%;
-    }
-
-    .right-circle {
-        right: -55%;
-    }
-
-    .icon {
-        height: 45px;
-    }
-
-    .content {
-        margin-bottom: 10%;
-    }
-}
-
-@media (max-width: 768px) {
-    h1 {
-        font-size: 30px;
-    }
-
-    h2 {
-        font-size: 20px;
-    }
-
-    h3 {
-        font-size: 15px;
-    }
-
-    .content {
-        margin-bottom: 17%;
-    }
-
-    header {
-        padding: 40px 40px;
-    }
-
-    .email-container {
-        padding: 100px 200px;
-        gap: 10px;
-    }
-
-    .social {
-        gap: 0px;
-    }
-
-    .persons-container {
-        gap: 20px;
-    }
-
-    .left-person, .right-person {
-        gap: 10px;
-    }
-
-    .person-name, .person-info {
-        font-size: 15px;
-    }
-
-    .staff-text {
-        font-size: 40px;
-    }
-
-    .white-stroke {
-        -webkit-text-stroke-width: 0.5px;
-    }
-
-    .left-circle {
-        left: -75%;
-    }
-
-    .right-circle {
-        right: -75%;
-    }
-
-    .icon {
-        height: 30px;
-    }
-    
 }
 
 @media (max-width: 520px) {
