--- a/styles/main.css
+++ b/styles/main.css
@@ -206,7 +206,70 @@ header {
 }
 
 @media (max-width: 768px) {
-    
+    h1 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    header {
+        justify-content: left;
+        padding: 45px 45px 0 45px;
+    }
+
+    .staff-text {
+        font-size: 45px;
+    }
+
+    .left-img__container,
+    .right-img__container {
+        width: 50%;
+        height: 100%;
+        overflow: hidden;
+    }
+
+    .left-img__container img,
+    .right-img__container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transform: none;
+    }
+
+    .icon {
+        width: 30px;
+    }
+    .social {
+        height: 40px;
+    }
+
+    .circle {
+        width: 300px;
+        height: 300px;
+    }
+
+    .left-circle {
+        top: 44%;
+    }
+
+    .content {
+        flex-direction: column;
+        margin-bottom: 10%;
+    }
+
+    .persons-container > div:nth-child(odd) {
+        transform: translateX(15rem);
+    }
+
+    .persons-container > div:nth-child(even) {
+        transform: translateX(-15rem);
+    }
+
+    .persons-container {
+        gap: 50px;
+    }
 }
 
 @media (max-width: 520px) {
