--- a/styles/modificators.css
+++ b/styles/modificators.css
@@ -1,9 +1,5 @@
-.screen--background {
-    background: url('/src/background.png') center/cover no-repeat;
-}
-
 .segoe {
-    font-family: 'Segoe UI' sans-serif;
+    font-family: 'Segoe UI', sans-serif;
 }
 .roboto {
     font-family: 'Roboto', sans-serif;
@@ -16,7 +12,7 @@
 .staff-text {
     display: flex;
     align-items: baseline;
-    font-size: 5.1875rem;
+    font-size: 83px;
 }
 
 .orange-color { color: var(--orange); }
@@ -26,35 +22,18 @@
     color: transparent;
 }
 
-.white-stroke { -webkit-text-stroke-color: var(--white); }
-.orange-stroke { -webkit-text-stroke-color: var(--orange); }
+.white-stroke { -webkit-text-stroke-color: var(--white) }
+.orange-stroke { -webkit-text-stroke-color: var(--orange) }
 
-.screen-background {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.white-stroke_hover, .orange-stroke_hover {
-    -webkit-text-stroke: 0;
-}
+.white-stroke_hover, .orange-stroke_hover { -webkit-text-stroke: 0; }
 
 .white-stroke_hover { color: var(--white); }
 .orange-stroke_hover { color: var(--orange); }
 
-.icon { border-radius: var(--border-radius); }
-
 .left-circle { inset-inline-start: -10%; }
 .right-circle { inset-inline-end: -10%; }
 
-.contact-us {
-    transition: color var(--transition-duration) ease-in-out;
-}
-
+.contact-us { transition: color var(--transition-duration) ease-in-out; }
 .contact-us:hover { color: var(--orange); }
-
-.circle-person { width: 100%; }
 
 .border-no { border: none; }
