--- a/styles/blocks.css
+++ b/styles/blocks.css
@@ -187,15 +187,36 @@
 
 /* Galleryes */
 
-.content_container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 0 3%;
+@media screen and (min-width: 1024px) {
+    .content_container {
+        width: 100%;
+        column-count: 3;
+        gap: 1rem;
+        padding: 0 3%;
+    }
 }
 
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+    .content_container {
+        width: 100%;
+        column-count: 2;
+        gap: 1rem;
+        padding: 0 3%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .content_container {
+        width: 100%;
+        column-count: 1;
+        gap: 1rem;
+        padding: 0 3%;
+    }
+}
 .stills_img {
+    width: 100%;
+    height: 100%;
     margin: 10px;
     border-radius: 10px;
+    transition: all 0.3s ease-in-out;
 }
