--- a/styles/main.css
+++ b/styles/main.css
@@ -18,8 +18,8 @@ time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
     font: inherit;
+    font-size: 100%;
     vertical-align: baseline;
 }
 
@@ -40,8 +40,8 @@ blockquote, q {
     quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote::before, blockquote::after,
+q::before, q::after {
     content: '';
     content: none;
 }
@@ -93,18 +93,18 @@ body, html {
 }
 
 h1 {
-    font-family: "Segoe UI Variable Display";
+    font-family: "Segoe UI Variable Display", sans-serif;
     font-size: 55px;
     font-weight: bold;
 }
 
 h2 {
-    font-family: "Segoe UI Variable Display";
+    font-family: "Segoe UI Variable Display", sans-serif;
     font-size: 38px;
 }
 
 h3 {
-    font-family: "Segoe UI Variable Display";
+    font-family: "Segoe UI Variable Display", sans-serif;
     font-size: 25px;
 }
 
@@ -200,7 +200,7 @@ header {
 
     header {
         justify-content: left;
-        padding: 45px 45px 0 45px;
+        padding: 45px 45px 0;
     }
 
     .staff-text {
@@ -222,6 +222,7 @@ header {
     .icon {
         width: 30px;
     }
+
     .social {
         height: 40px;
     }
